<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".user.LoginActivity">

    <ImageView
...
        android:layout_height="68dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorTertiary"
        android:text="@string/login"
        android:textColor="@color/accent"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/link_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/link_signup"
        android:layout_width="415dp"
...
